LMS-2: Add prefix/suffix

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,11 @@ server:
     min-response-size: 10240
 ---
 spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .html
   config:
     activate:
       on-profile: production
+
