--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'lms'
+
+include ':App_Launcher'
+include ':App_Platform'
+include ':App_Web'
+include ':App_Service'
+include ':App_Data'
