--- a/App_Service/build.gradle
+++ b/App_Service/build.gradle
@@ -1,38 +1,9 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.0.1'
-    id 'io.spring.dependency-management' version '1.1.0'
-}
-
-group = 'academy.belhard'
-version = '0.1'
-sourceCompatibility = '17'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     implementation(project(':App_Platform'))
     implementation(project(':App_Data'))
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-}
 
-tasks.named('test') {
-    useJUnitPlatform()
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 }
