--- a/App_Launcher/src/main/resources/application.yaml
+++ b/App_Launcher/src/main/resources/application.yaml
@@ -23,6 +23,8 @@ server:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
     min-response-size: 10240
+app:
+  host: http://localhost:8080
 ---
 spring:
   config:
