--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ allprojects() {
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     }
 
     tasks.named('test') {
