--- a/build.gradle
+++ b/build.gradle
@@ -47,3 +47,7 @@ allprojects() {
         mainClass = 'academy.belhard.lms.LmsApplication'
     }
 }
+
+dependencies {
+    implementation(project(':App_Launcher'))
+}
