LMS-41: Path for local save add to application.yaml

--- a/App_Launcher/src/main/resources/application.yaml
+++ b/App_Launcher/src/main/resources/application.yaml
@@ -24,6 +24,8 @@ server:
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
     min-response-size: 10240
 app:
+  files:
+    localStorage: files
   host: http://localhost:8080
 ---
 spring:
