--- a/App_Service/src/main/resources/exceptionsMessages.properties
+++ b/App_Service/src/main/resources/exceptionsMessages.properties
@@ -1,4 +1,4 @@
-UserServiceExistingEmail=Email %s already exists in the database.
-UserServiceUserNotActivated=User not activated
-UserServiceUserNotFound=User not found
-UserServiceWrongOldPassword=Wrong old password
+UserService.ExistingEmail=\u041F\u043E\u0447\u0442\u043E\u0432\u044B\u0439 \u0430\u0434\u0440\u0435\u0441 %s \u0443\u0436\u0435 \u0438\u043C\u0435\u0435\u0442\u0441\u044F \u0432 \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445
+UserService.UserNotActivated=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u0430\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D
+UserService.UserNotFound=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
+UserService.WrongOldPassword=\u041D\u0435 \u0432\u0435\u0440\u043D\u044B\u0439 \u0441\u0442\u0430\u0440\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
