--- a/App_Service/src/main/resources/textMessages.properties
+++ b/App_Service/src/main/resources/textMessages.properties
@@ -1,3 +1,4 @@
-UserServiceActivateLinkPattern=Please, visit link: %s/auth/activate/%s/%s
-UserServiceUserConfirmationSubject=User confirmation
-UserServiceRecoveryPassLinkPattern=Please, visit link: %s/auth/recoveryPass/%s/%s
+UserService.ActivateLinkPattern=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u043F\u043E \u0441\u0441\u044B\u043B\u043A\u0435: %s/auth/activate/%s/%s
+UserService.UserConfirmationSubject=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+UserService.RecoveryPassLinkPattern=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u043F\u043E \u0441\u0441\u044B\u043B\u043A\u0435: %s/auth/recoveryPass/%s/%s
+UserService.EmailRecoveryPasswordSubject=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u0430\u0440\u043E\u043B\u044F
